--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "element-plus": "^2.9.1",
     "less": "^4.2.0",
     "less-loader": "^12.2.0",
